--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "koa": "^1.2.0",
     "koa-qs": "^2.0.0",
     "koa-router": "^5.4.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "webpack": "^1.13.1"
   }
 }
