--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-      "watch": "webpack --config webpack.client.config --watch",
-      "start": "node server.init.js"
+    "watch": "webpack --config webpack.client.config --watch",
+    "start": "node server.init.js"
   },
   "dependencies": {
     "babel-core": "^6.5.2",
@@ -19,6 +19,7 @@
     "expose-loader": "^0.7.1",
     "jsx-loader": "^0.13.2",
     "koa": "^1.2.0",
+    "koa-no-cache": "^1.1.0",
     "koa-qs": "^2.0.0",
     "koa-router": "^5.4.0",
     "react": "^15.2.1",
