--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.3.13",
+    "dotenv": "^2.0.0",
     "expose-loader": "^0.7.1",
     "jsx-loader": "^0.13.2",
     "koa": "^1.2.0",
